Squashed commit of the following:
commit b3e71822f86d98fd08a6502ec8b0e9e96c0c8bac
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 20:21:46 2016 +0200

    formatting

commit 09bf08306dd5f8afd8306f42ef9ee96378aca9fc
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 20:18:14 2016 +0200

    formatting

commit fbd9ab7de881af4cc88d45be476c972ea58f0770
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 20:09:37 2016 +0200

    updated readme

commit 1cb18dce535f7b74ee6a3cb6bbadb58997f57c93
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:54:50 2016 +0200

    formatting

commit b45349885226ccbc5a71622200bef7e9cb0f5481
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:53:00 2016 +0200

    formatting

commit 1e89d7c28a752198556cb20415b7280770589f34
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:39:17 2016 +0200

    formatting

commit e5043dca9dfab0161d924554744814b4f874dc64
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:37:14 2016 +0200

    formatting

commit 5e4304f6c3db0173bbed2c1a5e161b155145ac22
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:36:02 2016 +0200

    formatting

commit 695177f2fdde9e5a07012ecb51aaa77dbf3f8ca9
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:35:16 2016 +0200

    formatting

commit 4435f863fa97afe8c2e057b45a6d1c8c221af358
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:29:44 2016 +0200

    renamed fig

commit b42b5d10791c7844c18944e334835b123a1a4720
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:28:13 2016 +0200

    warfarin assets

commit c4e0b60c5423f42bd7749dfe53e1ae730a8ad5e4
Author: Frank McSherry <fmcsherry@me.com>
Date:   Wed Jun 15 19:18:15 2016 +0200

    warfarin post

commit cc77c743ccb54394cc323da52722cd70f0c3a7a9
Author: Frank McSherry <fmcsherry@me.com>
Date:   Tue Jun 7 10:07:18 2016 +0200

    code example polished

commit 4e4918cf1d55da036fc0e0047ec899c145bea5

--- a/posts/2016-05-19.md
+++ b/posts/2016-05-19.md
@@ -10,7 +10,7 @@ The post starts with some background about differential privacy, their article, 
 
 I think the authors have the causality backwards here. At least for [the post I wrote](https://github.com/frankmcsherry/blog/blob/master/posts/2016-02-03.md), their arguments are engaged on their merits and found (by me) lacking. The subsequent attempts to explain the authors' inaccurate statements leads to questions about their intelligence or honesty (or both!). 
 
-The authors are right that I could have skipped calling them out on their shortcomings, but which would you prefer: civil but dishonest discourse, or candid and honest discourse? Should we just "teach the controversy"? The Fool's Gold paper has a position (the clue is in the name): it calls out several people by name for not understanding apparent issues with differential privacy.
+The authors are right that I could have skipped calling them out on their shortcomings, but which would you prefer: civil but dishonest discourse, or candid and honest discourse? The Fool's Gold paper has a position (the clue is in the name): it calls out several people by name for not understanding apparent issues with differential privacy.
 
 > The not-so-subtle subtext is “don’t listen to these idiots. They are bad people.”
 
@@ -22,7 +22,7 @@ I still haven't determined if they are "bad" in the moral sense of actively mali
 
 There absolutely *are* limitations to differential privacy, and they do have significance. They are not, however, the limitations presented by the authors. I think that pushing on these limitations is a *great* thing for research to do, but pointing at non-limitations and saying "it can never work" is not helpful. Identify the actual limitations, determine if they are fundamental (often they are not), and accomplish science. I dare you.
 
-Also, I'm guessing that "have fallen out of vogue" is code for "have substandard privacy guarantees". No one is talking about differential privacy because it is easy to use, it is interesting because it provides real and meaningful privacy guarantees.
+Also, I'm guessing that "have fallen out of vogue" is code for "have substandard privacy guarantees". No one is talking about differential privacy because it is easy to use, it is interesting because it provides real and meaningful privacy guarantees. If the "out of vogue" approaches did this satisfactorily, I wouldn't be here.
 
 And just to be totally clear, I don't have any issues with people who have trouble using differential privacy. It is not yet easy to use. I would like to make it more easy to use. Until that happens, keep using the tools you understand. However, if you have any interest in the world becoming a better place, the right way to do this is to engage rather than dissemble. 
 
@@ -30,7 +30,9 @@ And just to be totally clear, I don't have any issues with people who have troub
 
 As we will discuss, the apparent limitations of differential privacy are in fact limitations in the authors' understanding of differential privacy. We'll review their four responses, and see that responses (2) and (4) present fundamental misunderstandings of differential privacy's limitations. Response (1) is rhetorical nonsense, and I agree with response (3).
 
-### Part 1: "Differential Privacy should destroy utility—that’s what ensures privacy."
+The heading for each subsection is a quote from their post, each a hypothetical position taken by people like me. Some are actual positions (2, 3, and 4) while 1 is just silly talk. With that...
+
+### Response 1: "Differential Privacy should destroy utility—that’s what ensures privacy."
 
 Differential privacy should *limit* utility-that's what ensures privacy. Whether it "destroys" it or not depends on whether your view of utility is "distinguishing between datasets differing in one record". If this is your view of utility, it is fundamentally at odds with differential privacy. However, large swathes of statistics are expressely *not* interested in this view of utility. 
 
@@ -44,7 +46,7 @@ This quote highlights the importance of getting one's quantifiers correct, an im
 
 The disagreement between us is both technical and philosophical. Mostly it is a technical disagreement, as we will see in more detail. I don't insist that anyone actually use differential privacy, but I do require that they speak accurately and honestly about it. This latter part is apparently where we disagree philosophically.
 
-### Part 2: "We exaggerate the damage that Differential Privacy does to utility"
+### Response 2: "We exaggerate the damage that Differential Privacy does to utility"
 
 This response starts with the issue that taking the average of unbounded (the authors say "skewed" but skew is irrelevant here) variables can make differential privacy's bounds look bad. This is true, but an identical complaint holds for the law of large numbers: taking an average can be an arbitrarily inaccurate statistical estimator if you increase the range of values in the distribution. The normal response is that, holding the distribution fixed, as you increase the number of samples the accuracy increases. The same response applies for differential privacy. 
 
@@ -92,11 +94,11 @@ No, it doesn't. At least, not in a way that violates differential privacy. When 
 
 For interested persons, [the code for the examples](https://github.com/frankmcsherry/blog/blob/master/posts/2016-02-06.md#can-you-show-me-how-to-do-this) has been available for months. In the authors' defense, it was not tweeted at them so perhaps they were unaware.
 
-### Part 3: "We overlook the evolution in Differential Privacy that has permitted more data utility."
+### Response 3: "We overlook the evolution in Differential Privacy that has permitted more data utility."
 
 This part responds to complaints by Anand Sarwate that there are other related privacy definitions that might have more accuracy. The authors complain that this is a bait-and-switch tactic, and I completely agree. In a hypothetical world where differential privacy was uniformly bad, a response of "there are other options" wouldn't invalidate a complaint about differential privacy itself. I don't think we are in that world, but I support the authors pushing back on this defense.
 
-### Part 4: "There are methods other than adding LaPlace noise that satisfy pure Differential Privacy."
+### Response 4: "There are methods other than adding LaPlace noise that satisfy pure Differential Privacy."
 
 Who taught you how to capitalize French things? 
 
