--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -1,4 +1,4 @@
-# Statistical correlation considered harmful
+# Statistical inference considered harmful
 
 Today we'll talk about a very exciting paper:
 
