--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -62,7 +62,7 @@ Here is a different one:
 
 Let's distill it down to its essence:
 
-> "Statistical correlation considered harmful"
+> "Statistical inference considered harmful"
 
 Unfortunately, the deadline for Usenix Security 2016 has already passed.
 
