--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -82,7 +82,7 @@ In fact, their attack is often much *less* effective than differential privacy w
 
 The authors seem to be making the argument that the existence of accurate models are enough to launch a privacy attack, where their privacy attack involves you first revealing secret personal information to the attacker. I think they are barking up the wrong tree here. Their proposed remedy is "suppress science". 
 
-The paper does not appear to report much privacy risk in *participating in training* such a dosing model. I would stress that just because they don't find much privacy risk in participating in training doesn't mean there isn't any. Their results indicate much less risk than differential privacy guarantees, especially for large epsilon, which may just mean that they don't have a very powerful attack. There could easily be a paper next year indicating that the risk is actually closer to the differential privacy bound.
+The paper does report not much privacy risk in *participating in training* such a dosing model. I would stress that just because they don't find much privacy risk in participating in training doesn't mean there isn't any. Their results indicate much less risk than differential privacy guarantees, especially for large epsilon, which may just mean that they don't have a very powerful attack. There could easily be a paper next year indicating that the risk is actually closer to the differential privacy bound.
 
 ## Issue 2
 
@@ -100,7 +100,7 @@ The important feature here is that we know how valuable the measurements are. Yo
 
 If you do this properly (which might be hard; it's well-defined mathematically, but perhaps challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg dose` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg dose` it should be no worse (perhaps with some variation because randomness).
 
-Figures 8b, 8c, and 8d just seem to show that `LR` doesn't reduce the risk over `Fixed 10mg dose`, and if you corrected the DP approaches they shouldn't either. Now you have several techniques that don't improve over `Fixed 10mg dose`; that sound a bit like the Warfarin modelers still have some work to do.
+Figures 8b, 8c, and 8d are a bit of a mystery to me. They seem to show that `LR` doesn't reduce the risk over `Fixed 10mg dose`, and if you corrected the differential privacy approaches they shouldn't either. Now you have several techniques that don't improve over `Fixed 10mg dose`. I'm not sure what that shows; it's not my figure.
 
 ### Conclusions
 
@@ -162,15 +162,15 @@ The second reason is that the risk introduced over fixed dosing was primarily du
 
 	Differential privacy doesn't kill (hypothetical) people, these authors do. ;)
 
-### Homework for the Usenix Security crowd
+### An analogy for the Usenix Security crowd
 
-Try writing down an analogous version of the arguments in this paper, where you replace 
+Imagine you had to review this paper, where  
 
-* **stable Warfarin dosage** with **a hash of my password**
-* **genomic dosing model** with **a list of popular passwords**
+* **stable Warfarin dosage** is replaced with **a hash of my password**
+* **genomic dosing model** is replaced with **a list of popular passwords**
 
-Now write the analogue of model inversion, where the attacker of course is given the hash of my password, and may learn about commonly used passwords *but only if we let them*. Then, study how to suppress the accurate release of common passwords by adding noise somehow. Finally, conclude 
+Model inversion is replaced with "brute-force password attack", where the attacker of course is given the hash of a password, and may learn about commonly used passwords *but only if the authors let them*. The paper then studies how to suppress the accurate release of common passwords by adding noise somehow. Finally, it concludes 
 
 > "We did not observe a noise level that significantly prevents brute force password attacks, without seriously undermining password strength-checking dictionaries."
 
-Then put a picture of a dead body with a toe tag.
+What does your review of that paper look like?
