introduced warfarin, paper

--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -6,6 +6,10 @@ Today we'll talk about a very exciting paper:
 
 This paper appeared at [Usenix Security, 2014](https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-fredrikson-privacy.pdf), where it won the best paper award! Holy crap!
 
+The paper looks at challenges in dosing [Warfarin](https://en.wikipedia.org/wiki/Warfarin), an anticoagulant with a somewhat challenging dosing protocol. It can be hard to figure out how to get patients on the right track with dosage, and any help they can get by looking harder at the patient (or in this case, their genetic markers) could help. In particular, an accurate statistical model of correlation between certain genetic markers and the appropriate Warfarin dose could help tremendously.
+ 
+But, maybe if you look too hard, you accidentally reveal more information about the patients than you intended. This sounds like it could be a privacy problem, and differential privacy claims it can help here. The authors want to know!
+
 The paper claims two main contributions: 
 
 First, they describe an attack, named *model inversion*, which "given the model and some demographic information about a patient, can predict the patient’s genetic markers."
