introduced 10mg, lr

--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -92,7 +92,7 @@ The paper does report not much privacy risk in *participating in training* such 
 
 What about the "increased risks of stroke, bleeding events, and mortality"? It seems they correspond to a hypothetical treatment plan that takes several differentially private measurements as absolute truth, ignoring how *strong* or *weak* the indicator is for each patient. If you have a really strong signal that is a great reason to change someone's dosage, but if you get only a weak signal it is probably best to keep it at (or closer to) the baseline. They just treat all the signals as "very strong" and change dosages all over the place and some hypothetical people die.
 
-Let's look at their Figure 8, which evaluates varying privacy values epsilon (the x-axes) for four metrics for success in Warfarin dosing.
+Let's look at their Figure 8, which evaluates varying privacy values epsilon (the x-axes) for four metrics for success in Warfarin dosing, compared against always starting with 10m (`Fixed 10mg`) and the non-privacy linear regression (`LR`).
 
 ![Figure 8](https://github.com/frankmcsherry/blog/blob/master/assets/warfarin/Figure8.png)
 
