--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -92,17 +92,19 @@ The paper does report not much privacy risk in *participating in training* such 
 
 What about the "increased risks of stroke, bleeding events, and mortality"? It seems they correspond to a hypothetical treatment plan that takes several differentially private measurements as absolute truth, ignoring how *strong* or *weak* the indicator is for each patient. If you have a really strong signal that is a great reason to change someone's dosage, but if you get only a weak signal it is probably best to keep it at (or closer to) the baseline. They just treat all the signals as "very strong" and change dosages all over the place and some hypothetical people die.
 
-Let's look at their Figure 8, which evaluates varying privacy values epsilon (the x-axes) for four metrics for success in Warfarin dosing, compared against always starting with 10m (`Fixed 10mg`) and the non-privacy linear regression (`LR`).
+Let's look at their Figure 8, which evaluates varying privacy values epsilon (the x-axes) for four metrics for success in Warfarin dosing, compared against always starting with 10mg (`Fixed 10mg`) and the non-privacy linear regression (`LR`).
 
 ![Figure 8](https://github.com/frankmcsherry/blog/blob/master/assets/warfarin/Figure8.png)
 
 This figure reveals that small epsilon pretty much kills people. And if you use their approach, it probably does. In fact, although they don't plot it, their approach probably kills the most people with epsilon = 0 measurements. The measurements would be entirely noise, no signal, and so they would basically be randomly dosing people.
 
-Imagine you are going in for your Warfarin dosing, and are told "often we use 10mg when we don't know any better, but we've just gotten this pile of literally worthless measurements and we are going to dose you based on them." I'm guessing you'd say "10mg please".
+Imagine you are going in for your Warfarin dosing, and are told "often we use 10mg when we don't know any better, but we've just gotten this pile of literally worthless measurements and we are going to dose you based on them." 
 
-The important feature here is that we know how valuable the measurements are. You know that with epsilon = 0 there is no value, and so they should not adjust your prior strategy of 10mg dosing. A similar correction is *supposed* to apply to Figure 8 too: rather than just use the results of noisy measurements, integrate them with your prior belief that 10mg might be fine, weighted by your confidence in the measurements. 
+I'm guessing you'd say "10mg please".
 
-If you do this properly (which might be hard; it's well-defined mathematically, but perhaps challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg dose` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg dose` it should be no worse (perhaps with some variation because randomness).
+The important feature here is that we know how valuable the measurements are. You know that with epsilon = 0 there is no value, and so you should not adjust your prior strategy of 10mg dosing. A similar correction is *supposed* to apply to Figure 8 too: rather than just use the results of noisy measurements, integrate them with your prior belief that 10mg might be fine, weighted by your confidence in the measurements. 
+
+If you do this properly (which might be hard; it's well-defined mathematically, but often challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg dose` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg dose` it should be no worse (perhaps with some variation because randomness).
 
 Figures 8b, 8c, and 8d are a bit of a mystery to me. They seem to show that `LR` doesn't reduce the risk over `Fixed 10mg dose`, and if you corrected the differential privacy approaches they shouldn't either. Now you have several techniques that don't improve over `Fixed 10mg dose`. I'm not sure what that shows; it's not my figure.
 
