--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -104,9 +104,9 @@ I'm guessing you'd say "10mg please".
 
 The important feature here is that we know how valuable the measurements are. You know that with epsilon = 0 there is no value, and so you should not adjust your prior strategy of 10mg dosing. A similar correction is *supposed* to apply to Figure 8 too: rather than just use the results of noisy measurements, integrate them with your prior belief that 10mg might be fine, weighted by your confidence in the measurements. 
 
-If you do this properly (which might be hard; it's well-defined mathematically, but often challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg dose` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg dose` it should be no worse (perhaps with some variation because randomness).
+If you do this properly (which might be hard; it's well-defined mathematically, but often challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg` it should be no worse (perhaps with some variation because randomness).
 
-Figures 8b, 8c, and 8d are a bit of a mystery to me. They seem to show that `LR` doesn't reduce the risk over `Fixed 10mg dose`, and if you corrected the differential privacy approaches they shouldn't either. Now you have several techniques that don't improve over `Fixed 10mg dose`. I'm not sure what that shows; it's not my figure.
+Figures 8b, 8c, and 8d are a bit of a mystery to me. They seem to show that `LR` doesn't reduce the risk over `Fixed 10mg`, and if you corrected the differential privacy approaches they shouldn't either. Now you have several techniques that don't improve over `Fixed 10mg`. I'm not sure what that shows; it's not my figure.
 
 ### Conclusions
 
@@ -162,7 +162,7 @@ The quote is
 
 This is totally true, they didn't observe such a budget. But it's fine for so many reasons. 
 
-The first reason is that model inversion misdiagnoses the source of the privacy violation: sharing your Warfarin dosage, or having it snooped from you, is what discloses information about your genetic markers. Their correlation as observed among large populations of people who are not you is *not* the source of your privacy woes. Model inversion is a non-attack.
+The first reason is that model inversion misdiagnoses the source of the privacy violation: sharing your Warfarin dosage, or having it snooped from you, is what discloses information about your genetic markers. Their correlation as observed among large populations of people who are not you is *not* the source of your privacy woes. Model inversion is a non-attack; no one should care whether it is prevented or not.
 
 The second reason is that the risk introduced over fixed dosing was primarily due to ignoring the statistical information about the differentially private measurements. The confidence associated with the measurement is (or should be) an important part of determining by how much you depart from your baseline treatment. That didn't happen in these experiments. The observed increased risk over fixed dosing is there because the use of statistical data without statistical techniques introduced it. 
 
