--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -10,6 +10,8 @@ In this post we will look at a recently re-popularized programming language, [Da
 
 Most of this work started up while I was at ETH Zurich's Systems Group, working with John Liagouris and Zaheer Chothia. At the very end, I mention some more recent work with Semih Salihoglu and Khaled Ammar at Waterloo.
 
+Thanks go to John Liagouris who gave some early comments on this post, and supplied measurements for the larger (non-laptop fitting) computations.
+
 ## Datalog
 
 For those of you not familiar with Datalog, let's start with a brief review. The [Datalog wikipedia page](https://en.wikipedia.org/wiki/Datalog) also has some good information, and I'm largely going to use their examples because they are nice and clear.
