--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -266,7 +266,7 @@ These graphs are a bit bigger than above, so it shouldn't be much of a cheat unl
 | tc (17) | 	   49s |    72s / 45s | 
 | sg (11) |        53s |          OOM |
 
-Ok, differential dataflow went out of memory on the same generation query on my laptop. This actually makes lots of sense, because the limiting aspect of the `sg` program is that it needs to keep all of the two billion result tuples (8 bytes each) around somehow so that it can suppress duplicates. Actually, to be totally honest I didn't even write the `sg` query, I just wrote `OOM`.
+Ok, differential dataflow went out of memory on the same generation query on my laptop. This actually makes lots of sense, because the limiting aspect of the `sg` program is that it needs to keep all of the two billion result tuples (8 bytes each) around somehow so that it can suppress duplicates. Actually, to be totally honest I didn't even run the `sg` query, I just wrote `OOM`.
 
 The `sg` results are a crazy expansive way to represent what could be pretty compact information. For example, if the "same generation" relation were an equivalence relation, as is the case for tree-structured input data, then we could just represent the sets of people in each generation, rather than producing the quadratically large set of all pairs of them.
 
@@ -361,7 +361,7 @@ These are the numbers the Big Datalog paper reports for the "people you may know
 |      arabic |       225s |            250s |  241s |
 |     twitter |       948s |           1129s | 3298s |
 
-I don't have an external database, and I haven't implemented anything like an antijoin yet (`cogroup` would probably work, but I'm lazy). So, I thought I'd take this opportunity to show differential doing something that I think is much cooler, especially as relates to magic sets and querying.
+I don't have such an external database, and I haven't implemented anything like an antijoin yet (`cogroup` would probably work, but it's currently broken and I'm lazy). So, I thought I'd take this opportunity to show differential doing something that I think is much cooler, especially as relates to magic sets and querying.
 
 Here is the query, `Program 9` from the Big Datalog paper.
 
@@ -370,7 +370,7 @@ Here is the query, `Program 9` from the Big Datalog paper.
 	cnt(Y, Z, count⟨X⟩)) := uarc(X, Y), uarc(X, Z), Y!= Z, ∼uarc(Y, Z)
 	pymk(X, W9, topk⟨10, Z⟩) := cnt(X, $ID, Z), pages(X, W2, . . . , W9)
 
-There is an identifier `$ID` baked into the query, in the same way that it is baked into the reachability and bfs queries, and you can see that for populating the `pymk` relation we only really care to evaluate `cnt(_, $ID, _)`. But, if you are doing bottom-up semi-naïve Datalog evaluation, and I suspect these folks are, you are probably going to evaluate pretty much all of the `cnt` relation. You can see that they sure take a while to do the computation in the numbers up above.
+There is an identifier `$ID` baked into the query, in the same way that it is baked into the reachability and shortest paths queries, and you can see that for populating the `pymk` relation we only really care to evaluate `cnt(_, $ID, _)`. But, if you are doing bottom-up semi-naïve Datalog evaluation, and I suspect these folks are, you are probably going to evaluate pretty much all of the `cnt` relation. You can see that they sure take a while to do the computation in the numbers up above.
 
 Let's do something smarter. Something "magic".
 
@@ -406,7 +406,7 @@ Elsewhere in the program, I load up the graph and then repeatedly introduce rand
 	latency: Duration { secs: 0, nanos: 112475 }
 	latency: Duration { secs: 0, nanos: 2287092 }
 
-So, although it takes about 10s to load up the data, we stab out and get all of the friends-of-friends of our target `$ID` people in times ranging from 73ms down to 49us. That's pretty cool. It's also a lot faster than doing a fresh computation with `$ID` baked into it for each distinct `$ID`.
+So, although it takes about 10s to load up the data, we stab out and get all of the friends-of-friends of our target `$ID` people in times ranging from 49us to 73ms. That's pretty cool. It's also a lot faster than doing a fresh computation with `$ID` baked into it for each distinct `$ID`.
 
 We can do the same thing with the `orkut` graph dataset:
 
@@ -423,7 +423,7 @@ We can do the same thing with the `orkut` graph dataset:
 	latency: Duration { secs: 0, nanos: 255116 }
 	latency: Duration { secs: 0, nanos: 4386029 }
 
-It takes a little longer to start up, because the graph is a little larger, and now the times range from 32ms down to 255us. Pretty neat, huh?
+It takes a little longer to start up, because the graph is a little larger, and now the times range from 255us to 32ms. Pretty neat, huh?
 
 Let's do the `twitter` graph next.
 
@@ -447,13 +447,13 @@ Instead, numbers on the Xeon courtesy John Liagouris (using one core):
 	latency: Duration { secs: 0, nanos: 64377 }
 	latency: Duration { secs: 4, nanos: 707158442 }
 
-The loading time drops to about 52 seconds using 16 cores. Some of the latencies are small because of the 65 million node identifiers, only 42 million actually have incident edges. All of the "tens of microseconds" results are likely just zero-degree vertices. Other numbers are "hundreds of microseconds", though all stayed (barely) sub-second.
+The loading time drops to about 52 seconds using 16 cores. Some of the latencies are small because of the 65 million node identifiers, only 42 million actually have incident edges. All of the "tens of microseconds" results are likely just zero-degree vertices. Other numbers are "hundreds of microseconds", though all stayed (barely) sub-second. 
 
 The multi-level marketing had some complicated program and just had a distasteful feel to it, so I didn't do anything there. It does highlight the point that as programs get more complicated, the value of a layer that manages the planning for you increases. This is the point that Datalog experts can show up and shine, by doing lots of clever transformations to the computation rather than me typing things out by hand. I'm happy to concede that point.
 
 ## Dynamic data
 
-It is worth mentioning that all of the differential dataflow computations above work when the underlying relations change too. I can't be bothered to show you all the times, but for small changes they are all sub-second updates, and often sub-millisecond. It is a lot like the times we saw for making queries, but you are updating the graphs instead of the things that go and meet the graphs. Whatever, it's fast.
+It is worth mentioning that all of the differential dataflow computations above work when the underlying relations change too. I can't be bothered to show you all the times, but for small changes they are all sub-second updates, and often sub-millisecond. It is a lot like the times we saw for making queries in the `pymk` computation, but you are updating the graphs instead of the things that go and meet the graphs. Whatever, it's fast.
 
 LogicBlox is the only other system I'm aware of that steps up to the "interactively update recursive queries" plate. We did a bake off and differential dataflow ended up ahead, but we also had interactive access to the differential dataflow source code, whereas the LogicBlox implementation is a grown-up product that probably doesn't get hacked on just because some query goes faster when you do.
 
@@ -465,7 +465,7 @@ It is worth asking "what is the trade-off with differential dataflow?" Why has i
 
 There are some down sides that I thought I would try and be candid about, in the interest of full disclosure. The two that I can think of are:
 
-1. Compile times. Differential dataflow is built on Rust, and Rust is compiled down through LLVM. Specifically, it is *very aggressively* compiled, and the amount of time between writing your program and seeing results the first time can be quite high. Of course, the time to launch the program the next time is trivial, but it is something to build in if your goal is to make money with infinite data scientists typing on infinite macbooks.
+1. Compile times. Differential dataflow is built on Rust, and Rust is compiled down through LLVM. Specifically, it is *very aggressively* compiled, and the amount of time between writing your program and seeing results the first time can be quite high. Of course, the time to launch the program the next time is trivial, but it is something to factor in if your goal is to make money with infinite data scientists typing on infinite macbooks.
 
 2. Cognitive overhead. Differential dataflow seems to have relatively simple programs once you write them, but there can be a disconnect between what you want to happen and what it does. It is rather clever on your behalf, and almost 100% of the time you try and be even more clever to help it, you undo the cleverness. This lack of intuitive bridge can make it hard for people exploring to directly write the program they want, because they aren't really sure what is going to happen. Perhaps making the methods ALLCAPS would help. 
 
