--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -615,7 +615,7 @@ I'm not sure what your expectation was, but this actually ends up going faster t
 	p(X,W)   :- q(X,R,Y), p(Y,Z), u(R,Z,W)
 	q(X,Y,Z) :- q(X,R,W), q(W,P,Z), t(R,P,Y)
 
-On our data, the fourth rule in there is the real killer, and it is cyclic. If you do the binary join `p(X,Y), p(X,Z)` first, you produce about two billion tuples, most of which get thrown away when they get checked against `c(Y,Z,W)`. There are better binary join orderings to use, but the Ngo et al algorithm gets to choose between them on *a tuple-by-tuple basis*, and ends up about 3x faster than the best fixed plan for the second rule.
+On our data, the fourth rule in there is the real killer, and it is cyclic. If you do the binary join `p(X,Y), p(X,Z)` first, you produce about two billion tuples, most of which get thrown away when they get checked against `c(Y,Z,W)`. There are better binary join orderings to use, but the Ngo et al algorithm gets to choose between them on *a tuple-by-tuple basis*, and ends up about 3x faster than the best fixed plan for that fourth rule.
 
 ### In the future
 
